# arcade

./: .gitignore  Makefile  README.md
.opencode/skills/arcade-game/: skill.md
ignore/: CMakeLists.txt
scripts/: install_deps.sh
src/: main.cpp
src/cmp/: entity.cpp  entity.hpp  physics.hpp
src/man/: componentstorage.hpp  componentstoreage.cpp  entitymanager.cpp  entitymanager.hpp
src/sys/: audio.cpp  audio.hpp  collision.cpp  collision.hpp  input.cpp  input.hpp  physics.cpp  physics.hpp  rendersystem.cpp  rendersystem.hpp  scenedata.hpp
src/util/: gamecontext.hpp  typealiases.hpp
tools/: capture_gameplay.py  capture_screenshot.py  generate_sprites.py  improve_sprites.py
